<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/fragment_meeting_event_creation"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <include
    layout="@layout/tab_home"
    android:layout_width="match_parent"
...
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constrainedHeight="true"
    app:layout_constraintTop_toBottomOf="@id/meeting_event_creation_title">

    <EditText
      android:id="@+id/meeting_title_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/meeting_title_required"
      android:inputType="text"
      android:autofillHints="false" />
  </LinearLayout>
...
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="parent">

    <Button
      android:id="@+id/meeting_event_creation_cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cancel"
      style="@style/Theme.AppCompat" />

    <Button
      android:id="@+id/meeting_event_creation_confirm"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:enabled="false"
      android:text="@string/confirm"
      style="@style/Theme.AppCompat" />

...
