<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/fragment_organizer_poll"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <TextView
    android:id="@+id/title_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginHorizontal="@dimen/margin_text"
    android:text="@string/create_poll_title"
    android:textSize="@dimen/size_title"
    android:textStyle="bold" />

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:id="@+id/question_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/question_title"
        android:textSize="@dimen/size_body" />

      <EditText
        android:id="@+id/question_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:autofillHints="false" />

      <LinearLayout
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        app:layout_constrainedHeight="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meeting_title">

        <EditText
          android:id="@+id/start_date_edit_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:focusableInTouchMode="false"
          android:hint="@string/start_date_required"
          android:autofillHints="false" />

        <EditText
          android:id="@+id/end_date_edit_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:autofillHints="false"
          android:focusableInTouchMode="false"
          android:hint="@string/end_date_optional" />

      </LinearLayout>

      <LinearLayout
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        app:layout_constrainedHeight="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date">

        <EditText
          android:id="@+id/start_time_edit_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:focusableInTouchMode="false"
          android:hint="@string/start_time_required"
          android:autofillHints="false" />

        <EditText
          android:id="@+id/end_time_edit_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:focusableInTouchMode="false"
          android:hint="@string/end_time_optional"
          android:autofillHints="false" />

      </LinearLayout>


      <RadioGroup
        android:id="@+id/radio_group_poll_type"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
          android:id="@+id/radio_poll_type_1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/poll_type_1" />

        <RadioButton
          android:id="@+id/radio_poll_type_2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/poll_type_2" />

      </RadioGroup>

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
          android:id="@+id/choices_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/choices_title"
          android:textSize="@dimen/size_body"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
          android:id="@+id/button_add"
          android:layout_width="@dimen/margin_text"
          android:layout_height="@dimen/margin_text"
          android:gravity="center_vertical"
          android:src="@drawable/ic_baseline_add_24"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      </androidx.constraintlayout.widget.ConstraintLayout>

      <ListView
        android:id="@+id/choices_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="NestedScrolling" />

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
          android:id="@+id/schedule_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:enabled="false"
          android:text="@string/button_schedule"
          app:layout_constraintEnd_toStartOf="@+id/cancel_button"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <Button
          android:id="@+id/cancel_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/button_cancel"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/schedule_button"
          app:layout_constraintTop_toTopOf="parent" />

      </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
  </ScrollView>

</LinearLayout>