...
    <string name="picker_selection">selection</string>
    <string name="past_events">Past Events</string>
    <string name="present_events">Present Events</string>
    <string name="future_events">Future Events</string>

    <!-- Poll Event -->
    <string name="poll_event">Poll Event</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Confirm</string>
    <string name="select_event_type_dialog_title">Select Event Type</string>
    <string name="create_poll_title">Create a Poll</string>
    <string name="question_title">Question :</string>
    <string name="poll_type_1">Choose 1 of N</string>
...
